tdf#113289: Default value for footnote separator

In old versions of LO/AOO, separator style was defaulting to a solid
line. When you have an old document that doesn't have the style set
explicitly, the line would disappear.

Since newer versions explicitly set the style, we should set the default
to what it was before.

Change-Id: I8dacea75fcf2f95f9bc145442b22ab0d173e7c5a
Reviewed-on: https://gerrit.libreoffice.org/69167
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>